fargate/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "randmeth-campaigns-ingress"
  namespace: "randmeth"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: randmeth-campaigns
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "randmeth-campaigns"
              servicePort: 80
